src/norx/soundSystem.nim


proc orxSoundSystem_SetReferenceDistance*(pstSound: ptr orxSOUNDSYSTEM_SOUND;
    fDistance: orxFLOAT): orxSTATUS {.cdecl, importc: "orxSoundSystem_SetReferenceDistance",
                                   dynlib: libORX.}
## * Loops a sound
##  @param[in]   _pstSound                             Concerned sound
##  @param[in]   _bLoop                                Loop / no loop
##  @return orxSTATUS_SUCCESS / orxSTATSUS_FAILURE
##

proc orxSoundSystem_Loop*(pstSound: ptr orxSOUNDSYSTEM_SOUND; bLoop: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxSoundSystem_Loop", dynlib: libORX.}
## * Gets a sound volume
##  @param[in]   _pstSound                             Concerned sound
##  @return Sound's volume
##

proc orxSoundSystem_GetVolume*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.cdecl,
    importc: "orxSoundSystem_GetVolume", dynlib: libORX.}
## * Gets a sound pitch
##  @param[in]   _pstSound                             Concerned sound
##  @return Sound's pitch
##

proc orxSoundSystem_GetPitch*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.cdecl,
    importc: "orxSoundSystem_GetPitch", dynlib: libORX.}
## * Gets a sound's time (ie. cursor/play position from beginning)
##  @param[in]   _pstSound                             Concerned sound
##  @return Sound's time (cursor/play position), in seconds
##

proc orxSoundSystem_GetTime*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.cdecl,
    importc: "orxSoundSystem_GetTime", dynlib: libORX.}
## * Gets a sound position
##  @param[in]   _pstSound                             Concerned sound
##  @param[out]  _pvPosition                           Position to get
##  @return Sound's position
##

proc orxSoundSystem_GetPosition*(pstSound: ptr orxSOUNDSYSTEM_SOUND;
                                pvPosition: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxSoundSystem_GetPosition", dynlib: libORX.}
## * Gets a sound attenuation
##  @param[in] _pstSound                               Concerned Sound
##  @return Sound's attenuation
##

proc orxSoundSystem_GetAttenuation*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetAttenuation", dynlib: libORX.}
## * Gets a sound reference distance
##  @param[in] _pstSound                               Concerned Sound
##  @return Sound's reference distance
##

proc orxSoundSystem_GetReferenceDistance*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetReferenceDistance", dynlib: libORX.}
## * Is sound looping?
##  @param[in]   _pstSound                             Concerned sound
##  @return orxTRUE if looping, orxFALSE otherwise
##

proc orxSoundSystem_IsLooping*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxBOOL {.cdecl,
    importc: "orxSoundSystem_IsLooping", dynlib: libORX.}
## * Gets a sound duration
##  @param[in]   _pstSound                             Concerned sound
##  @return Sound's duration (seconds)
##

proc orxSoundSystem_GetDuration*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetDuration", dynlib: libORX.}
## * Gets a sound status (play/pause/stop)
##  @param[in]   _pstSound                             Concerned sound
##  @return orxSOUNDSYSTEM_STATUS
##

proc orxSoundSystem_GetStatus*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxSOUNDSYSTEM_STATUS {.
    cdecl, importc: "orxSoundSystem_GetStatus", dynlib: libORX.}
## * Sets global volume
##  @param[in] _fGlobalVolume                          Global volume to set
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxSoundSystem_SetGlobalVolume*(fGlobalVolume: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxSoundSystem_SetGlobalVolume", dynlib: libORX.}
## * Gets global volume
##  @return Gobal volume
##

proc orxSoundSystem_GetGlobalVolume*(): orxFLOAT {.cdecl,
    importc: "orxSoundSystem_GetGlobalVolume", dynlib: libORX.}
## * Sets listener position
##  @param[in] _pvPosition                             Desired position
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxSoundSystem_SetListenerPosition*(pvPosition: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxSoundSystem_SetListenerPosition", dynlib: libORX.}
## * Gets listener position
##  @param[out] _pvPosition                            Listener's position
##  @return orxVECTOR / nil
##

proc orxSoundSystem_GetListenerPosition*(pvPosition: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxSoundSystem_GetListenerPosition", dynlib: libORX.}
## * @}
